--- a/.classpath
+++ b/.classpath
@@ -2,6 +2,23 @@
 <classpath>
 	<classpathentry kind="con" path="org.eclipse.jdt.launching.JRE_CONTAINER/org.eclipse.jdt.internal.debug.ui.launcher.StandardVMType/JavaSE-1.8"/>
 	<classpathentry kind="src" path="src"/>
-	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/json-20190722.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/commons-codec-1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/commons-logging-1.1.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-api-client-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-api-services-calendar-v3-rev305-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-http-client-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-http-client-jackson2-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-oauth-client-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-oauth-client-java6-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/google-oauth-client-jetty-1.23.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/guava-jdk5-17.0.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/httpclient-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/httpcore-4.0.1.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/jackson-core-2.1.3.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/jetty-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/jetty-util-6.1.26.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/json-20190722.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/jsr305-1.3.9.jar"/>
+	<classpathentry kind="lib" path="C:/Users/Jonathan/eclipse-workspace/Event Suggester/src/main/resources/JarFiles/servlet-api-2.5-20081211.jar"/>
 	<classpathentry kind="output" path="bin"/>
 </classpath>
